--- a/Assignments/Team Lead (Tariq Jamal A)/Assignment-2/templates/index.html
+++ b/Assignments/Team Lead (Tariq Jamal A)/Assignment-2/templates/index.html
@@ -39,41 +39,27 @@
         </div>
     </nav>
 
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://assets.entrepreneur.com/content/3x2/2000/1593079102-work-731198.jpg" class="d-block w-100" alt="..." style="height: 90vh;">
-            </div>
-            <div class="carousel-item">
-                <img src="https://d1rytvr7gmk1sx.cloudfront.net/wp-content/uploads/2021/02/software-developer-on-php-code.jpg" class="d-block w-100" alt="..." style="height: 90vh;">
-            </div>
-            <div class="carousel-item">
-                <img src="https://assets.entrepreneur.com/content/3x2/2000/1593079102-work-731198.jpg" class="d-block w-100" alt="..." style="height: 90vh;">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-
     <div class="container-fluid my-3">
-        <p class="px-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos officiis sed sint unde nisi! Asperiores tempora fugit quia non optio, mollitia ullam voluptas nisi, repellat dolorum odit vero eius voluptatibus sed totam hic. Temporibus adipisci iste obcaecati iure, tenetur sit sed neque distinctio tempore aperiam eveniet laboriosam ullam magnam totam beatae architecto necessitatibus, rerum quae ipsa. Laudantium magni dolor ea, odio ab provident assumenda impedit hic possimus? Reprehenderit voluptatibus tempora aut iusto laboriosam laborum quo, molestiae eaque delectus et consequatur officiis! Molestiae, sit facere earum a rem at quidem quasi voluptas asperiores dolores dolorum sint distinctio error iste qui accusamus! Eaque amet hic nihil fugit at eligendi dolorem exercitationem pariatur quia temporibus error accusamus facilis minus sit illo, vero aperiam nemo iure nulla ex, excepturi voluptatum. Excepturi dolorem, laborum iure deserunt labore, est quo esse voluptates vitae sapiente culpa exercitationem eum architecto numquam, atque mollitia necessitatibus repudiandae temporibus! Repudiandae, minima!</p>
+        {{ msg }}
+
+        <table class="table">
+            <thead class="table-primary">
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Password</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for row in users %}
+                <tr>
+                    <td>{{row["NAME"]}}</td>
+                    <td>{{row["EMAIL"]}}</td>
+                    <td>{{row["PASSWORD"]}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
